--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
             <p>Hibernate</p>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/New_Power_BI_Logo.svg" alt="Power BI"
+              class="skill-icon mb-2" />
+            <p>Power BI</p>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
             <img src="https://cdn-icons-png.flaticon.com/512/456/456212.png" alt="SDLC" class="skill-icon mb-2" />
             <p>SDLC</p>
           </div>
@@ -285,38 +290,57 @@
 
         <div class="row g-4">
           <!-- Project 1 -->
-          <div class="col-md-6">
-            <div class="card shadow-sm" data-aos="fade-up">
-              <img src="article_2659_cover_en_US.webp" loading="lazy" height="300px" width="300px" class="card-img-top" 
+          <div class="col-md-4">
+            <div class="card shadow-sm" data-aos="fade-up" data-aos-delay="100">
+              <img src="article_2659_cover_en_US.webp" loading="lazy" height="200px" width="200px" class="card-img-top"
                 alt="Non-Invasive Glucometer Project using Arduino"
                 style="display: block; margin: auto; object-fit: cover;" />
               <div class="card-body">
-                <h5 class="card-title">Non Invasive Glucometer with Bluetooth Monitoring using Arduino Uno</h5>
+                <h5 class="card-title">Non-Invasive Glucometer with Bluetooth Monitoring using Arduino Uno</h5>
                 <p class="card-text">
-                  <strong>Tech Stack:</strong>MATLAB/ArduinoUno, Bluetooth HC-06, LCD Display, Sensor <br />
-                  Implemented and managed non-invasive glucometer with Bluetooth monitoring technology, demonstrating
-                  expertise in medical device innovation.<br />
+                  <strong>Tech Stack:</strong> MATLAB, Arduino Uno, Bluetooth HC-06, LCD Display, Sensor<br>
+                  Implemented and managed a non-invasive glucometer with Bluetooth monitoring, demonstrating expertise
+                  in medical device innovation.<br>
                   Developed seamless connectivity for real-time data transmission, enhancing user experience and
-                  providing
-                  valuable insights for health monitoring.
+                  providing valuable insights for health monitoring.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Project 2 -->
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="card shadow-sm" data-aos="fade-up" data-aos-delay="100">
-              <img src="online-shopping-concept-FRP2TC.webp" alt="e-commerce project" width="300" height="300"
+              <img src="online-shopping-concept-FRP2TC.webp" alt="E-commerce project" width="200" height="200"
                 class="card-img-top" style="display: block; margin: auto; object-fit: cover;" />
               <div class="card-body">
                 <h5 class="card-title">Dynamic E-commerce Web Application Using Spring Boot & Razorpay Integration</h5>
                 <p class="card-text">
                   <strong>Tech Stack:</strong> Spring Boot, Thymeleaf, MySQL, Hibernate, Razorpay API<br>
                   Built a full-stack e-commerce platform with user authentication, role-based access, and secure payment
-                  processing.
-                  Integrated Razorpay for payment transactions and Cloudinary for efficient image handling.
+                  processing.<br>
+                  Integrated Razorpay for payment transactions and Cloudinary for efficient image handling.<br>
                   Designed an intuitive UI for seamless product browsing and checkout experience.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="col-md-4">
+            <div class="card shadow-sm" data-aos="fade-up" data-aos-delay="100">
+              <img src="Screenshot 2025-05-16 180749.png" alt="Retail Sales Dashboard" width="300" height="270"
+                class="card-img-top" style="display: block; margin: auto; object-fit: cover;" />
+              <div class="card-body">
+                <h5 class="card-title">Retail Sales Dashboard with Power BI</h5>
+                <p class="card-text">
+                  <strong>Tech Stack:</strong> Excel, MySQL, Power BI<br>
+
+                  Developed an interactive dashboard visualizing retail sales performance across multiple regions and
+                  timeframes.<br>
+                  Connected MySQL data source to Power BI for dynamic reporting and drill-down capabilities.<br>
+                  Empowered business stakeholders with data-driven insights to optimize sales strategies.
+                </p>
               </div>
             </div>
           </div>
